--- a/charts/commento/templates/service.yaml
+++ b/charts/commento/templates/service.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "commento.fullname" . }}
+  name: {{ template "commons.fullname" . }}
   labels:
-    app: {{ template "commento.name" . }}
-    chart: {{ template "commento.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "commons.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
@@ -15,5 +12,4 @@ spec:
       protocol: TCP
       name: commento
   selector:
-    app: {{ template "commento.name" . }}
-    release: {{ .Release.Name }}
+    {{- include "commons.selectorLabels" . | nindent 6 }}
