--- a/charts/default-backend/templates/cronjob-service-account.yaml
+++ b/charts/default-backend/templates/cronjob-service-account.yaml
@@ -2,12 +2,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "default-backend.fullname" . }}-recycle-cronjob
+  name: {{ include "commons.fullname" . }}-recycle-cronjob
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ include "default-backend.fullname" . }}
-    appRevision: {{ template "default-backend.nameRevision" . }}
-    release: {{ include "default-backend.fullname" . }}
-    releaseRevision: {{ .Release.Revision | quote }}
-    {{- include "default-backend.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 {{ end }}
