--- a/charts/commento/Chart.yaml
+++ b/charts/commento/Chart.yaml
@@ -4,11 +4,14 @@ description: Helm chart to install commento on a kubernetes cluster
 home: https://commento.io/
 icon: https://cdn.commento.io/images/logo.svg
 name: commento
-version: 0.1.1
+version: 0.1.2
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
 dependencies:
+  - name: commons
+    version: ^0.1
+    repository: https://helm.wyrihaximus.net/
   - name: horizontal-pod-autoscalers
     version: ^0.2
     repository: https://helm.wyrihaximus.net/
