--- a/charts/commento/templates/ingress.yaml
+++ b/charts/commento/templates/ingress.yaml
@@ -1,15 +1,12 @@
 {{- if eq (eq .Values.ingress.host "comments.YOURDOMAIN.TLD") false }}
 {{- $chartName := .Chart.Name -}}
-{{- $fullName := include "commento.fullname" . -}}
+{{- $fullName := include "commons.fullname" . -}}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app: {{ template "commento.name" . }}
-    chart: {{ template "commento.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "commons.labels" . | nindent 4 }}
 {{- with .Values.ingress.annotations }}
   annotations:
 {{ toYaml . | indent 4 }}
