--- a/charts/commento/templates/tests/test-connection.yaml
+++ b/charts/commento/templates/tests/test-connection.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "commento.fullname" . }}-test-connection"
+  name: "{{ include "commons.fullname" . }}-test-connection"
   labels:
-    app: {{ template "commento.name" . }}
-    chart: {{ template "commento.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "commons.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -14,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "commento.fullname" . }}:8967/login']
+      args:  ['{{ include "commons.fullname" . }}:8967/login']
   restartPolicy: Never
