--- a/charts/default-backend/Chart.yaml
+++ b/charts/default-backend/Chart.yaml
@@ -4,13 +4,16 @@ description: A Helm chart for Kubernetes
 home: https://github.com/wyrihaximusnet/docker-default-backend
 icon: https://helm.wyrihaximus.net/images/charts/default-backend.png
 type: application
-version: 0.4.2
+version: 0.4.3
 kubeVersion: ^1.18
 appVersion: random
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
 dependencies:
+  - name: commons
+    version: ^0.1
+    repository: https://helm.wyrihaximus.net/
   - name: cron-jobs
     version: ^0.1
     repository: https://helm.wyrihaximus.net/
