--- a/charts/default-backend/templates/tests/test-metrics-connection.yaml
+++ b/charts/default-backend/templates/tests/test-metrics-connection.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "default-backend.fullname" . }}-test-metrics-connection"
+  name: {{ include "commons.fullname" . }}-test-metrics-connection
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -9,5 +9,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "default-backend.fullname" . }}:9696']
+      args:  ['{{ include "commons.fullname" . }}:9696']
   restartPolicy: Never
