--- a/charts/docker-hub-exporter/Chart.yaml
+++ b/charts/docker-hub-exporter/Chart.yaml
@@ -4,8 +4,12 @@ description: Docker Hub Exporter
 home: https://github.com/jessestuart/docker-hub-exporter
 icon: https://helm.wyrihaximus.net/images/charts/docker-hub-exporter.png
 type: application
-version: 0.5.2
+version: 0.5.3
 appVersion: d05df48
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
+dependencies:
+  - name: commons
+    version: ^0.1
+    repository: https://helm.wyrihaximus.net/
