--- a/charts/docker-hub-exporter/templates/deployment.yaml
+++ b/charts/docker-hub-exporter/templates/deployment.yaml
@@ -1,27 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   labels:
-    app: {{ include ".helm.fullname" . }}
-    appRevision: {{ template ".helm.nameRevision" . }}
-    release: {{ include ".helm.fullname" . }}
-    releaseRevision: {{ .Release.Revision | quote }}
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      {{- include ".helm.selectorLabels" . | nindent 6 }}
+      {{- include "commons.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9170"
       labels:
-        app: {{ include ".helm.fullname" . }}
-        release: {{ include ".helm.fullname" . }}
-        {{- include ".helm.selectorLabels" . | nindent 8 }}
+        {{- include "commons.labels" . | nindent 8 }}
     spec:
       containers:
         - name: docker-hub-exporter
@@ -64,5 +58,5 @@ spec:
               - key: app
                 operator: In
                 values:
-                - {{ template ".helm.nameRevision" . }}
+                - {{ template "commons.nameRevision" . }}
             topologyKey: "kubernetes.io/hostname"
