--- a/charts/docker-hub-exporter/templates/service.yaml
+++ b/charts/docker-hub-exporter/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   labels:
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    {{- include ".helm.selectorLabels" . | nindent 4 }}
+    {{- include "commons.selectorLabels" . | nindent 4 }}
