--- a/charts/redirect/templates/config.yaml
+++ b/charts/redirect/templates/config.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   labels:
-    app: {{ include ".helm.fullname" . }}
+    {{- include "commons.labels" . | nindent 4 }}
 data:
   config.yaml: |
     defaultFallbackTarget: {{ .Values.redirect.defaultFallbackTarget }}
