--- a/charts/redirect/templates/cronjob-service-account.yaml
+++ b/charts/redirect/templates/cronjob-service-account.yaml
@@ -2,12 +2,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include ".helm.fullname" . }}-recycle-cronjob
+  name: {{ include "commons.fullname" . }}-recycle-cronjob
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ include ".helm.fullname" . }}
-    appRevision: {{ template ".helm.nameRevision" . }}
-    release: {{ include ".helm.fullname" . }}
-    releaseRevision: {{ .Release.Revision | quote }}
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 {{ end }}
