--- a/charts/redirect/templates/cronjob.yaml
+++ b/charts/redirect/templates/cronjob.yaml
@@ -1,3 +1,3 @@
 {{- if .Values.cron.replaceOldestPodWeekly -}}
-{{- include "cron-jobs.cronjob" (fromYaml (.Files.Get "values/cronjob.yaml" | replace "[[fullname]]" (include ".helm.fullname" .) | replace "[[app]]" (include ".helm.name" .) | replace "[[release]]" .Release.Name | replace "[[namespace]]" .Release.Namespace)) -}}
+{{- include "cron-jobs.cronjob" (fromYaml (.Files.Get "values/cronjob.yaml" | replace "[[fullname]]" (include "commons.fullname" .) | replace "[[app]]" (include "commons.name" .) | replace "[[release]]" .Release.Name | replace "[[namespace]]" .Release.Namespace)) -}}
 {{ end }}
