--- a/charts/redirect/templates/grafana-prometheus-dashboard.yaml
+++ b/charts/redirect/templates/grafana-prometheus-dashboard.yaml
@@ -2,8 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include ".helm.fullname" . }}-prometheus-grafana-dashboard
+  name: {{ include "commons.fullname" . }}-prometheus-grafana-dashboard
   labels:
+    {{- include "commons.labels" . | nindent 4 }}
     grafana_dashboard: redirects
 data:
   redirects.json: |
