--- a/charts/redirect/templates/service-account.yaml
+++ b/charts/redirect/templates/service-account.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include ".helm.serviceAccountName" . }}
+  name: {{ include "redirect.serviceAccountName" . }}
   labels:
-{{ include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 {{- end -}}
