--- a/charts/redirect/templates/service.yaml
+++ b/charts/redirect/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   labels:
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -16,4 +16,4 @@ spec:
       protocol: TCP
       name: http-metrics
   selector:
-    {{- include ".helm.selectorLabels" . | nindent 4 }}
+    {{- include "commons.selectorLabels" . | nindent 4 }}
