--- a/charts/redirect/templates/tests/test-metrics-connection.yaml
+++ b/charts/redirect/templates/tests/test-metrics-connection.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include ".helm.fullname" . }}-test-metrics-connection"
-  labels:
-{{ include ".helm.labels" . | nindent 4 }}
+  name: "{{ include "commons.fullname" . }}-test-metrics-connection"
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +9,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include ".helm.fullname" . }}:7133']
+      args:  ['{{ include "commons.fullname" . }}:7133']
   restartPolicy: Never
