--- a/charts/redis-db-assignment-operator/templates/cluster-role-binding.yaml
+++ b/charts/redis-db-assignment-operator/templates/cluster-role-binding.yaml
@@ -1,19 +1,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ include ".helm.fullname" . }}
-    appRevision: {{ template ".helm.nameRevision" . }}
-    release: {{ include ".helm.fullname" . }}
-    releaseRevision: {{ .Release.Revision | quote }}
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ include ".helm.fullname" . }}
+    name: {{ include "commons.fullname" . }}
     namespace: {{ .Release.Namespace }}
