--- a/charts/redis-db-assignment-operator/templates/cluster-role.yaml
+++ b/charts/redis-db-assignment-operator/templates/cluster-role.yaml
@@ -2,14 +2,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ include ".helm.fullname" . }}
-    appRevision: {{ template ".helm.nameRevision" . }}
-    release: {{ include ".helm.fullname" . }}
-    releaseRevision: {{ .Release.Revision | quote }}
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 rules:
 - apiGroups: ["wyrihaximus.net"]
   resources: ["redis-databases"]
