--- a/charts/redis-db-assignment-operator/templates/deployment.yaml
+++ b/charts/redis-db-assignment-operator/templates/deployment.yaml
@@ -1,31 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   labels:
-    app: {{ include ".helm.fullname" . }}
-    appRevision: {{ template ".helm.nameRevision" . }}
-    release: {{ include ".helm.fullname" . }}
-    releaseRevision: {{ .Release.Revision | quote }}
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
 spec:
   replicas: 1
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      {{- include ".helm.selectorLabels" . | nindent 6 }}
+      {{- include "commons.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9115"
       labels:
-        app: {{ include ".helm.fullname" . }}
-        release: {{ include ".helm.fullname" . }}
-        {{- include ".helm.selectorLabels" . | nindent 8 }}
+        {{- include "commons.selectorLabels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include ".helm.fullname" . }}
+      serviceAccountName: {{ include "commons.fullname" . }}
       containers:
         - name: redis-database-assignment-operator
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
