--- a/charts/redis-db-assignment-operator/templates/service-account.yaml
+++ b/charts/redis-db-assignment-operator/templates/service-account.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: {{ include "commons.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ include ".helm.fullname" . }}
-    appRevision: {{ template ".helm.nameRevision" . }}
-    release: {{ include ".helm.fullname" . }}
+    app: {{ include "commons.fullname" . }}
+    appRevision: {{ template "commons.nameRevision" . }}
+    release: {{ include "commons.fullname" . }}
     releaseRevision: {{ .Release.Revision | quote }}
-    {{- include ".helm.labels" . | nindent 4 }}
+    {{- include "commons.labels" . | nindent 4 }}
