Revert selector labels from commons
The initial commit that changed this mistakenly assumed all selectors where the same. This commit reverts that. As selector labels are immutable they cannot be changed.

However they will be in a future release to the desired selector labels. A guide on how to do the migration will be included when the time comes.

--- a/charts/commento/templates/pod-disruption-budget.yaml
+++ b/charts/commento/templates/pod-disruption-budget.yaml
@@ -7,5 +7,6 @@ spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-      {{- include "commons.selectorLabels" . | nindent 6 }}
+      app: {{ template "commons.name" . }}
+      release: {{ .Release.Name }}
 {{ end }}
