--- a/charts/commento/templates/deployment.yaml
+++ b/charts/commento/templates/deployment.yaml
@@ -8,11 +8,21 @@ spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      {{- include "commons.selectorLabels" . | nindent 6 }}
+      app: {{ template "commons.name" . }}
+      release: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        {{- include "commons.labels" . | nindent 8 }}
+        app: {{ template "commons.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ template "commons.name" . }}
+        app.kubernetes.io/version: {{ .Chart.Version | quote }}
+        appRevision: {{ template "commons.nameRevision" . }}
+        chart: {{ template "commons.chart" . }}
+        helm.sh/chart: {{ template "commons.chart" . }}
+        release: {{ .Release.Name }}
+        releaseRevision: {{ .Release.Revision | quote }}
+        heritage: {{ .Release.Service }}
     spec:
       containers:
         - name: commento
