--- a/charts/default-backend/templates/deployment.yaml
+++ b/charts/default-backend/templates/deployment.yaml
@@ -8,7 +8,8 @@ metadata:
 spec:
   selector:
     matchLabels:
-      {{- include "commons.selectorLabels" . | nindent 6 }}
+      app: {{ template "commons.name" . }}
+      release: {{ .Release.Name }}
   replicas: {{ .Values.replicas }}
   template:
     metadata:
@@ -16,7 +17,16 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9696"
       labels:
-        {{- include "commons.labels" . | nindent 8 }}
+        app: {{ template "commons.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ template "commons.name" . }}
+        app.kubernetes.io/version: {{ .Chart.Version | quote }}
+        appRevision: {{ template "commons.nameRevision" . }}
+        chart: {{ template "commons.chart" . }}
+        helm.sh/chart: {{ template "commons.chart" . }}
+        release: {{ .Release.Name }}
+        releaseRevision: {{ .Release.Revision | quote }}
+        heritage: {{ .Release.Service }}
     spec:
       containers:
         - name: default-backend
