--- a/charts/docker-hub-exporter/templates/deployment.yaml
+++ b/charts/docker-hub-exporter/templates/deployment.yaml
@@ -8,14 +8,24 @@ spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      {{- include "commons.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/name: {{ include "commons.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9170"
       labels:
-        {{- include "commons.labels" . | nindent 8 }}
+        app: {{ template "commons.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ template "commons.name" . }}
+        app.kubernetes.io/version: {{ .Chart.Version | quote }}
+        appRevision: {{ template "commons.nameRevision" . }}
+        chart: {{ template "commons.chart" . }}
+        helm.sh/chart: {{ template "commons.chart" . }}
+        release: {{ .Release.Name }}
+        releaseRevision: {{ .Release.Revision | quote }}
+        heritage: {{ .Release.Service }}
     spec:
       containers:
         - name: docker-hub-exporter
