--- a/charts/pi-hole-exporter/templates/service.yaml
+++ b/charts/pi-hole-exporter/templates/service.yaml
@@ -12,4 +12,5 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    {{- include "commons.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ include "commons.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
