--- a/charts/redis-db-assignment-operator/templates/deployment.yaml
+++ b/charts/redis-db-assignment-operator/templates/deployment.yaml
@@ -10,14 +10,24 @@ spec:
     type: Recreate
   selector:
     matchLabels:
-      {{- include "commons.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/name: {{ include "commons.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9115"
       labels:
-        {{- include "commons.selectorLabels" . | nindent 8 }}
+        app: {{ template "commons.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ template "commons.name" . }}
+        app.kubernetes.io/version: {{ .Chart.Version | quote }}
+        appRevision: {{ template "commons.nameRevision" . }}
+        chart: {{ template "commons.chart" . }}
+        helm.sh/chart: {{ template "commons.chart" . }}
+        release: {{ .Release.Name }}
+        releaseRevision: {{ .Release.Revision | quote }}
+        heritage: {{ .Release.Service }}
     spec:
       serviceAccountName: {{ include "commons.fullname" . }}
       containers:
