--- a/charts/commento/templates/ingress.yaml
+++ b/charts/commento/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if eq (eq .Values.ingress.host "comments.YOURDOMAIN.TLD") false }}
 {{- $chartName := .Chart.Name -}}
 {{- $fullName := include "commons.fullname" . -}}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -21,7 +21,10 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: commento
+              service:
+                name: {{ $fullName }}
+                port:
+                  name: commento
 {{- end }}
