--- a/charts/default-backend/templates/ingress.yaml
+++ b/charts/default-backend/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if not (empty .Values.ingress.hosts) -}}
 {{- $chartName := .Chart.Name -}}
 {{- $fullName := include "commons.fullname" . -}}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -24,8 +24,11 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: default-backend
+              service:
+                name: {{ $fullName }}
+                port:
+                  name: default-backend
     {{- end }}
 {{ end }}
