--- a/charts/commentoplusplus/Chart.yaml
+++ b/charts/commentoplusplus/Chart.yaml
@@ -1,11 +1,10 @@
 apiVersion: v2
 appVersion: "v1.8.0"
 description: Helm chart to install commento on a kubernetes cluster
-home: https://commento.io/
+home: https://github.com/souramoo/commentoplusplus/
 icon: https://cdn.commento.io/images/logo.svg
-name: commento
+name: commentoplusplus
 version: 0.2.0
-deprecated: true
 kubeVersion: ^1.19
 maintainers:
   - name: WyriHaximus
