--- a/charts/cron-jobs/Chart.yaml
+++ b/charts/cron-jobs/Chart.yaml
@@ -4,7 +4,8 @@ description: CronJobs library
 home: https://github.com/wyrihaximusnet/helm-charts
 icon: https://helm.wyrihaximus.net/images/charts/cron-jobs.png
 type: library
-version: 0.1.2
+version: 1.0.0
+kubeVersion: ">= 1.21"
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
