--- a/charts/cron-jobs/templates/_cronjob.yaml
+++ b/charts/cron-jobs/templates/_cronjob.yaml
@@ -1,6 +1,6 @@
 {{- define "cron-jobs.cronjob" }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: "{{ .name }}"
