--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,5 @@
   "labels": [ "Dependencies 📦"],
   "recreateClosed": true,
   "allowScripts": true,
-  "allowPlugins": true,
+  "allowPlugins": true
 }
