--- a/charts/horizontal-pod-autoscalers/templates/_hpa.yaml
+++ b/charts/horizontal-pod-autoscalers/templates/_hpa.yaml
@@ -1,6 +1,6 @@
 {{- define "horizontal-pod-autoscalers.hpa" }}
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .name }}
