--- a/.github/workflows/helm-charts-release.yaml
+++ b/.github/workflows/helm-charts-release.yaml
@@ -27,6 +27,9 @@ jobs:
           chmod 700 get_helm.sh
           ./get_helm.sh
 
+      - name: Add WyriHaximusNet repo
+        run: helm repo add WyriHaximusNet https://helm.wyrihaximus.net/
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
