--- a/charts/pi-hole-exporter/templates/pod-disruption-budget.yaml
+++ b/charts/pi-hole-exporter/templates/pod-disruption-budget.yaml
@@ -1,5 +1,5 @@
 {{- if gt (.Values.replicas | int) 1 -}}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "commons.fullname" . }}
