--- a/charts/cron-jobs/ci/sleep-values.yaml
+++ b/charts/cron-jobs/ci/sleep-values.yaml
@@ -1,12 +1,17 @@
+# List of cronjobs to create
 jobs:
-  - name: sleep
-    schedule: "* * * * *"
+  # Cronjob's name
+  - name: sleep  # @schema required:true
+    # Cronjob's schedule following [https://crontab.guru/](crontab syntax)
+    schedule: "* * * * *"  # @schema required:true
+    # Any labels to apply to the created cronjob
     labels:
       cronjob:
         key: value
       jobTemplate:
         key: value
-    container:
+    # Anything to apply to the container spec
+    container:  # @schema required:true
       command: ["sleep"]
       args: ["1"]
       resources:
@@ -16,7 +21,11 @@ jobs:
         requests:
           cpu: 1m
           memory: 12Mi
+    # Image configuration
     image:
-      repository: alpine
-      tag: 3.12
-      pullPolicy: IfNotPresent
+      # Image repository
+      repository: alpine  # @schema required:true
+      # The image tag to use
+      tag: 3.12  # @schema required:true
+      # The pod's image pull policy
+      pullPolicy: IfNotPresent  # @schema required:true
